--- a/src/main/resources/templates/discountList.html
+++ b/src/main/resources/templates/discountList.html
@@ -8,7 +8,7 @@
   
   <body>
   
-    <h1>Discount codes:</h1>
+    <h1>Введите промо-код:</h1>
     
     <ul>
       <li th:each="code : ${codes}">
