--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -9,67 +9,67 @@
   <body>
   
     <form method="POST" th:action="@{/orders}" th:object="${order}" id="orderForm">
-      <h1>Order your pancake creations!</h1>
+      <h1>Оформите заказ!</h1>
       
       <img th:src="@{/images/PancakeCloud.png}"/>
     	
-      <h3>Your pancake in this order:</h3>
-      <a th:href="@{/design}" id="another">Design another pancake</a><br/>
+      <h3>Ваш блин в этом заказе:</h3>
+      <a th:href="@{/design}" id="another">Заказать ещё один</a><br/>
       <ul>
-        <li th:each="pancake : ${order.pancake}"><span th:text="${pancake.name}">pancake name</span></li>
+        <li th:each="pancake : ${order.pancake}"><span th:text="${pancake.name}">имя блина</span></li>
       </ul>
       
       <div th:if="${#fields.hasErrors()}">
         <span class="validationError">
-        Please correct the problems below and resubmit.
+        Пожалуйста исправьте ошибки и отправьте запрос заново
         </span>
       </div>
       
-      <h3>Deliver my pancake masterpieces to...</h3>
-      <label for="deliveryName">Name: </label>
+      <h3>Доставка:</h3>
+      <label for="deliveryName">Имя: </label>
       <input type="text" th:field="*{deliveryName}"/>
       <span class="validationError"
             th:if="${#fields.hasErrors('deliveryName')}" 
             th:errors="*{deliveryName}">Name Error</span>
       <br/>
       
-      <label for="deliveryStreet">Street address: </label>
+      <label for="deliveryStreet">Улица, номер дома, квартиры: </label>
       <input type="text" th:field="*{deliveryStreet}"/>
       <span class="validationError"
             th:if="${#fields.hasErrors('deliveryStreet')}" 
             th:errors="*{deliveryStreet}">Street Error</span>
       <br/>
       
-      <label for="deliveryCity">City: </label>
+      <label for="deliveryCity">Город: </label>
       <input type="text" th:field="*{deliveryCity}"/>
       <span class="validationError"
             th:if="${#fields.hasErrors('deliveryCity')}" 
             th:errors="*{deliveryCity}">City Error</span>
       <br/>
       
-      <label for="deliveryState">State: </label>
+      <label for="deliveryState">Страна: </label>
       <input type="text" th:field="*{deliveryState}"/>
       <span class="validationError"
             th:if="${#fields.hasErrors('deliveryState')}" 
             th:errors="*{deliveryState}">State Error</span>
       <br/>
       
-      <label for="deliveryZip">Zip code: </label>
+      <label for="deliveryZip">Индекс: </label>
       <input type="text" th:field="*{deliveryZip}"/>
       <span class="validationError"
             th:if="${#fields.hasErrors('deliveryZip')}" 
             th:errors="*{deliveryZip}">Zip Error</span>
       <br/>
       
-      <h3>Here's how I'll pay...</h3>
-      <label for="ccNumber">Credit Card #: </label>
+      <h3>Оплата картой:</h3>
+      <label for="ccNumber">Номер кредитной карты: </label>
       <input type="text" th:field="*{ccNumber}"/>
       <span class="validationError"
             th:if="${#fields.hasErrors('ccNumber')}" 
             th:errors="*{ccNumber}">CC Num Error</span>
       <br/>
       
-      <label for="ccExpiration">Expiration: </label>
+      <label for="ccExpiration">Действительна до: </label>
       <input type="text" th:field="*{ccExpiration}"/>
       <span class="validationError"
             th:if="${#fields.hasErrors('ccExpiration')}" 
